Very rough copy plugged into several sections of site

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 19 2021 06:35:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 20 2021 06:02:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   <div class="contact_page_section">
     <div class="main_container">
       <h1 class="section_h1">Contact Us</h1>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">We sincerely hope to hear from you so we can help you on your journey to wellness. You can not reach a destination without taking steps, so begin today. Procrastination is a hinderence to health, so overcome and join us for a trip worth your time and effort. We looking forward to your joining our extended family on the path to wellness.</p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
           <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
