--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 19 2021 06:35:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 20 2021 06:02:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -47,11 +47,11 @@
   <div id="About" class="about_section">
     <div class="main_container">
       <div class="block_text_pre_h2">ABOUT US</div>
-      <h2 class="section_h2">See what sets us apart</h2>
+      <h2 class="section_h2">What sets us apart</h2>
       <div class="_4_block_row">
         <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">Over 30+ Years Experience</h4>
-          <p class="icon_para">Years of training and education at prestigious schools, mentorship to </p>
+          <p class="icon_para">Years of training and education at prestigious schools and years of clinical experience combined to bring our concierge treamtnet to each</p>
         </div>
         <div class="_4_block"><img src="images/top_rated_professionals.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="ad9224af-31de-81b9-ad67-f7fab77d4898" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">5-Star Rated Acupuncturists</h4>
@@ -69,8 +69,8 @@
       <div class="_2_block_row">
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
-          <h2 class="section_h2_left">Hospital clean office with best in class treatment options</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
+          <p>We take pride in keeping our office sterile and adhere with Covid-19 protocols. Rooms are sterilized after each client, face masks are worn by all and sanitizer is available to anybody who wishes to use it. We adhere to the CDC guidelines to ensure that the patient&#x27;s and our health stays well.</p>
         </div>
         <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
@@ -81,16 +81,16 @@
           <a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""></a>
         </div>
         <div class="_2_block">
-          <div class="block_text_pre_h2_left">CLEANLINESS</div>
-          <h2 class="section_h2_left">Hospital clean office with best in class treatment options</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <div class="block_text_pre_h2_left">TREATMENT OPTIONS</div>
+          <h2 class="section_h2_left">Results oriented treatment options</h2>
+          <p>We utilize the best proven treatment options available in Eastern Medicine. From acupuncture, cupping, auriculotherapy, moxabustion and heat therapy to individualized mixtures of traditional Chinese herbs to bring the client to optimized health and well being. We take great care to bring about effective, positive changes in our patient&#x27;s lifelong health.</p>
         </div>
       </div>
       <div class="statistics_block">
         <div class="statistics_container">
           <div class="statistics_title_wrapper">
             <div class="block_text_pre_h2">OUR STATISTICS</div>
-            <h3 class="section_h2">Over 900+ happy<br>patients through our doors<br></h3>
+            <h3 class="section_h2">900+ satisfied<br>patients through our doors<br></h3>
           </div>
           <div class="featured_number_wrapper">
             <div class="circle_wrapper">
@@ -138,8 +138,8 @@
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CONVENIENT LOCATION</div>
-          <h2 class="section_h2_left">Hospital clean office with best in class treatment options</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <h2 class="section_h2_left">???</h2>
+          <p>Dr. Ryu&#x27;s clinic is nestled between the Media Enclave and Toluca Lake. His office is right off the 134 Ventuyra Freeway and between the 170 Hollywood Freeway and the 5 Goldgen State Freewat. He is located on the 5th floor.</p>
           <div class="_2_block_row_mini">
             <div class="_2_block">
               <p class="paragraph-9">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
@@ -271,7 +271,7 @@
     <div class="main_container">
       <div class="block_text_pre_h2">OUR SERVICES</div>
       <h2 class="section_h2">Services to balance your life</h2>
-      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services within the city of Burbank, California. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proved effective for a wide array of chronic conditions. We </p>
+      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services within the city of Burbank, California. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. We determine the root cause of your condition and treat that, not just the symptoms you present. Treating symptoms does not obtain the lasting health benefits achieved by treating the root cause. This approach usually erradicates the underlying problems.</p>
       <div class="cards_grid">
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291ef5-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/needles_close_up.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291ef7" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="" class="cards_img"></div>
@@ -286,7 +286,7 @@
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291efc-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/cupping.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291efe" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" alt="" class="cards_img"></div>
           <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
-          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8" class="cards_para">Cupping is a form of alternative therapy originating in China. It involves placing cups on the skin to from suction that may help facilitate healing with the increased blood flow to the area of treatment.</p>
+          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8" class="cards_para">Cupping is a form of alternative therapy originating in China. It involves placing cups on the skin to form suction that may help facilitate healing with the increased blood flow to the area of treatment.</p>
         </div>
       </div>
       <div class="cards_grid">
@@ -464,7 +464,7 @@
     <div class="main_container">
       <div class="block_text_pre_h2">CONTACT US</div>
       <h1 class="section_h2">Let&#x27;s connect</h1>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">If you are willing to take the journey to wellness, please contact us. It is not always a short journey, but it is one with purpose - the purpose of getting your body back into balance, with all the systems contained within working at optimum performance and doing their part to conribute to overall health and well-being. If you want to expeirence then start your journey today so tomorrow&#x27;s outcome will be steps closer to your peak synergy.</p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
           <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="080dd785-70e0-d772-cecb-2c7f581d3070" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
