--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 19 2021 06:35:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 20 2021 06:02:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   <div class="services_intro_section">
     <div class="main_container">
       <h1 class="section_h1">Our Services</h1>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">Although our services are standard for Eastern Medicine, our treatment plans are highly specialized and indivuduailed to each patient&#x27;s needs. We look at all our available options and choose the course best suited to you and your journey to wellness. Feel free to discuss any of our services with your provider. If you have any questions or would like to try something in your quest for optimal health be sure to ask.</p>
     </div>
   </div>
   <div class="services_picture_section">
@@ -154,7 +154,7 @@
   </div>
   <div class="services_outro_section">
     <div class="main_container">
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">There are many options for treatment and we will design a custom plan for you, picking the best modalities available for your conditions and issues. No treatment plans are alike, but be assured we are choosing the best strategies to get you on to your journey to wellness.</p>
     </div>
     <a href="#" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
   </div>
