More adjustments to the copy of the home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Apr 20 2021 06:02:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 04:50:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -70,7 +70,7 @@
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
           <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
-          <p>We take pride in keeping our office sterile and adhere with Covid-19 protocols. Rooms are sterilized after each client, face masks are worn by all and sanitizer is available to anybody who wishes to use it. We adhere to the CDC guidelines to ensure that the patient&#x27;s and our health stays well.</p>
+          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy.</p>
         </div>
         <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
@@ -81,9 +81,9 @@
           <a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""></a>
         </div>
         <div class="_2_block">
-          <div class="block_text_pre_h2_left">TREATMENT OPTIONS</div>
-          <h2 class="section_h2_left">Results oriented treatment options</h2>
-          <p>We utilize the best proven treatment options available in Eastern Medicine. From acupuncture, cupping, auriculotherapy, moxabustion and heat therapy to individualized mixtures of traditional Chinese herbs to bring the client to optimized health and well being. We take great care to bring about effective, positive changes in our patient&#x27;s lifelong health.</p>
+          <div class="block_text_pre_h2_left">RESULTS MATTER</div>
+          <h2 class="section_h2_left">Exemplary record of success over many years of service</h2>
+          <p>We have been in business for over 20+ years, in which we have achieved great success with our patients and their outcomes. We utilize only the best and proven of Eastern Medicine treatments in individual, customized plans made specifically around your current health and any ailments you may be experiencing.</p>
         </div>
       </div>
       <div class="statistics_block">
@@ -138,8 +138,9 @@
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CONVENIENT LOCATION</div>
-          <h2 class="section_h2_left">???</h2>
-          <p>Dr. Ryu&#x27;s clinic is nestled between the Media Enclave and Toluca Lake. His office is right off the 134 Ventuyra Freeway and between the 170 Hollywood Freeway and the 5 Goldgen State Freewat. He is located on the 5th floor.</p>
+          <h2 class="section_h2_left">Easily accessible and within minutes of major freeways</h2>
+          <p>Our address is 3808 W. Riverside Dr. in the beautiful city of Burbank, California. We are conveniently located within the Bank of the West building, nestled between the Warner Bros., Walt Disney and Burbank Studios. We&#x27;re just South of the 134 Ventura Freeway and minutes from the 101, 170 and 5 freeways. Our office is located on the 5th floor in suite #510.<br></p>
+          <p>Need directions? <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="link">Click here &gt;&gt;</a><br></p>
           <div class="_2_block_row_mini">
             <div class="_2_block">
               <p class="paragraph-9">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
@@ -308,7 +309,7 @@
       </div>
       <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
       <div class="insurance_block">
-        <div class="block_text_pre_h2">WE ACCEPT AND ARE IN NETWORK WITH MOST PPO INSURANCE COMPANIES - PLEASE CALL TO VERIFY</div>
+        <div class="block_text_pre_h2">WE ACCEPT MOST IN AND OUT OF NETWORK INSURANCE. PLEASE CALL TO SEE IF YOUR BENEFITS APPLY.</div>
       </div>
     </div>
   </div>
