Some minor style issues, padding removal and more copy added to site

--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 06:44:21 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 08:28:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   <div class="our_team_section">
     <div class="main_container">
       <h1 class="section_h1">Our Team</h1>
-      <p class="solo_para">Our team is family-oriented with Dr. Ryu, Veronica his Wife and Jennifer his daughter all available to serve you. Each of them has certain specialties and together they have a wealth of knowledge. They see their patients as extended family and they invite you to allow their family to help you on your journey to wellness.</p>
+      <p class="solo_para">Our clinic is proudly family-owned and operated. Each member of our team brings different traits, skill sets, characteristics and specialties to the office - which makes us quite unique and more than capable of handling a wide-variety of different ailments. We are constantly working on improving our skills, keeping up with the latest medical information available and honing our technique. We welcome you to learn a bit more about each member of our team, our family.</p>
       <div class="blue_divide"></div>
       <div class="_2_block_row margin_bottom">
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 414.4375px, (max-width: 991px) 28vw, (max-width: 1279px) 32vw, 390px" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" alt="" class="bio_img"></div>
