--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 06:44:21 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 08:28:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -37,17 +37,17 @@
   <div class="contact_page_section">
     <div class="main_container">
       <h1 class="section_h1">Contact Us</h1>
-      <p class="solo_para">We sincerely hope to hear from you so we can help you on your journey to wellness. You can not reach a destination without taking steps, so begin today. Procrastination is a hinderence to health, so overcome and join us for a trip worth your time and effort. We looking forward to your joining our extended family on the path to wellness.</p>
+      <p class="solo_para">You can connect with us in a variety of ways that include email, phone, text or web form below. While we&#x27;re not magicians, we can guarantee our kind approach coupled with our years of expertise and knowledge will help you achieve balance in your journey to wellness. Feel free to reach out with questions or if you would like additional information about a particular treatment offered. We enjoy nothing more than to see our patients feeling better and returning to their normal lives and activities. </p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
           <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
         </div>
         <div class="_2_block margin_left">
           <div class="form-block w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
+            <form id="wf-form-Website-Inquiry---Contact-Page-Form" name="wf-form-Website-Inquiry---Contact-Page-Form" data-name="Website Inquiry - Contact Page Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
               <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
             </form>
-            <div class="w-form-done">
+            <div class="success-message-2 w-form-done">
               <div>Thank you! Your submission has been received!</div>
             </div>
             <div class="w-form-fail">
