--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 08:28:28 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 09:58:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@
   <div class="conditions_treated_page">
     <div class="main_container">
       <h1 class="section_h1">Conditions Treated</h1>
-      <p class="solo_para">According to the National Institutes of Health, Traditional Chinese medicine (TCM) is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
+      <p class="solo_para">According to the National Institutes of Health, <a href="https://www.nccih.nih.gov/health/traditional-chinese-medicine-what-you-need-to-know" class="blue_link">Traditional Chinese Medicine (TCM)</a> is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
       <div class="_2_block_row_ailment_right">
         <div data-w-id="18fc1319-c4f4-a476-ea5f-69382d118ce6" class="muscoskeletal_block">
           <div class="services_mask_left"></div>
@@ -483,7 +483,6 @@
           <div class="services_mask_right"></div>
         </div>
       </div>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
     </div>
   </div>
