--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 21 2021 09:58:55 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Apr 22 2021 06:22:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   <div class="testimonial_page_section">
     <div class="main_container mix-container">
       <h1 class="section_h1">Testimonials</h1>
-      <p class="solo_para">The following are reviews of our practice and our staff by past and present patients. Please peruse all the comments.</p>
+      <p class="solo_para">Come see why we are the #1 rated acupuncturists in Los Angeles. With over 110+ five star reviews through Yelp and Google, it is clear </p>
       <div data-w-id="917b686c-0e22-bc8f-8889-0287e98e202a" data-animation-type="lottie" data-src="documents/best_acupuncturist.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2" data-duration="0" class="lottie-animation"></div>
       <div class="filter-controls">
         <a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>ALL</strong></a>
