--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Apr 22 2021 06:22:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Apr 23 2021 06:25:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   <div class="services_intro_section">
     <div class="main_container">
       <h1 class="section_h1">Our Services</h1>
-      <p class="solo_para">Although our services are standard for Eastern Medicine, our treatment plans are highly specialized and indivuduailed to each patient&#x27;s needs. We look at all our available options and choose the course best suited to you and your journey to wellness. Feel free to discuss any of our services with your provider. If you have any questions or would like to try something in your quest for optimal health be sure to ask.</p>
+      <p class="solo_para">We utilize both Eastern and Western therapeutic tools to tailor the most comprehensive and efficient course of treatment to meet your health goals. We use best-in-class standards </p>
     </div>
   </div>
   <div class="services_picture_section">
